# pydocstringformatter

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements-coverage.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/workflows/: checks.yaml  primer.yaml  primer_comment.yaml  publish.yaml  tests.yaml
docs/: conf.py  development.rst  index.rst  requirements-doc.txt  usage.rst
docs/_ext/: link_fixer.py  usage_page.py
docs/_static/: custom.css
pydocstringformatter/: __init__.py  __main__.py  formatting.py  run.py
pydocstringformatter/_configuration/: arguments_manager.py  boolean_option_action.py  command_line_parsing.py  formatter_options.py  toml_parsing.py  validators.py
pydocstringformatter/_formatting/: __init__.py  _utils.py  base.py  formatter.py  formatters_default.py  formatters_numpydoc.py  formatters_pep257.py
pydocstringformatter/_testutils/: __init__.py  example_formatters.py
pydocstringformatter/_testutils/primer/: packages.py  primer.py
pydocstringformatter/_utils/: __init__.py  exceptions.py  file_diference.py  find_docstrings.py  find_python_file.py  issue_template.py  output.py
pydocstringformatter/configuration/: __init__.py  argument_parsing.py  arguments_manager.py  boolean_option_action.py  command_line_parsing.py  formatter_options.py  toml_parsing.py  validators.py
pydocstringformatter/formatting/: __init__.py  _utils.py  base.py  formatter.py
pydocstringformatter/testutils/: __init__.py
pydocstringformatter/testutils/primer/: const.py  packages.py  primer.py
pydocstringformatter/utils/: __init__.py  argument_parsing.py  exceptions.py  file_diference.py  find_docstrings.py  find_python_file.py  output.py  testutils.py
tests/: conftest.py  test_config.py  test_conflicting_formatters.py  test_exceptions.py  test_formatter.py  test_formatting.py  test_run.py  test_utils.py
tests/data/: incorrect_python_file.py
tests/data/config/exclude_match/: pyproject.toml
tests/data/config/exclude_match_csv/: pyproject.toml
tests/data/config/exclude_match_csv_list/: pyproject.toml
tests/data/config/exclude_match_inner/: pyproject.toml
tests/data/config/exclude_non_match/: pyproject.toml
tests/data/config/invalid_toml/: pyproject.toml
tests/data/config/non_existing_options/: pyproject.toml
tests/data/config/non_valid_toml_boolopt/: pyproject.toml
tests/data/config/non_valid_toml_boolopt_two/: pyproject.toml
tests/data/config/valid_toml/: pyproject.toml
tests/data/config/valid_toml_boolopt/: pyproject.toml
tests/data/config/valid_toml_numpydoc/: pyproject.toml
tests/data/config/valid_toml_numpydoc_pep257/: pyproject.toml
tests/data/config/valid_toml_pep257/: pyproject.toml
tests/data/config/valid_toml_two/: pyproject.toml
tests/data/format/beginning_quote/: class_docstring.py  class_docstring.py.out  function_docstrings.py  function_docstrings.py.out  module_docstring.py  variable_docstring.py.out
tests/data/format/capitalization_first_letter/: class_docstring.py  class_docstring.py.out  function_docstrings.py  function_docstrings.py.out  letter_after_quote.py.out  module_docstring.py  single_quote_docstring.args  single_quote_docstring.py  single_quote_docstring.py.out  uncapitalized_starting_letter.py  uncapitalized_starting_letter.py.out  variable_docstring.py  variable_docstring.py.out
tests/data/format/ending_quote/: class_docstring.py  class_docstring.py.out  function_docstrings.py  function_docstrings.py.out  module_docstring.py  module_docstring.py.out  variable_docstring.py  variable_docstring.py.out
tests/data/format/final_period/: class_docstring.py  class_docstring.py.out  exotic_line_ending.py  exotic_line_ending.py.out  function_docstrings.py  function_docstrings.py.out  function_title_docstrings.py.out  module_docstring.py  module_docstring.py.out  single_quote_docstring.py  variable_docstring.py  variable_docstring.py.out
tests/data/format/linewrap_summary/: function_docstrings.py  function_docstrings.py.out  max_line_length_50.args  max_line_length_50.py  max_line_length_50.py.out
tests/data/format/multi_line/: class_docstring.py  class_docstring.py.out  function_docstrings.py  function_docstrings.py.out  module_docstring.py  module_docstring.py.out  variable_docstring.py  variable_docstring.py.out
tests/data/format/multi_style/: numpydoc_parameter_spacing.args  numpydoc_parameter_spacing.py  numpydoc_parameter_spacing.py.out
tests/data/format/newlines/: dos.py  dos.py.out  mac.py  mac.py.out  mixed.err  mixed.py  mixed.py.out  none.py  none.py-0d0a.out  none.py.out  unix.py  unix.py.out
tests/data/format/no_changes/: multi_line_variables.py.out
tests/data/format/no_whitespace_stripper/: module_docstring.args  module_docstring.py  module_docstring.py.out
tests/data/format/numpy_style/: numpydoc_parameter_spacing.args  numpydoc_parameter_spacing.py  numpydoc_section_ordering.args  numpydoc_section_ordering.py  numpydoc_section_ordering.py.out
tests/data/format/numpydoc/: numpydoc_bad_section_name.args  numpydoc_bad_section_name.py  numpydoc_bad_section_name.py.out  numpydoc_closing_quotes.args  numpydoc_closing_quotes.py  numpydoc_closing_quotes.py.out  numpydoc_header_line.args  numpydoc_header_line.py.out  numpydoc_parameter_spacing.args  numpydoc_parameter_spacing.py.out  numpydoc_regression.args  numpydoc_regression.py  numpydoc_regression.py.out  numpydoc_section_ordering.args  numpydoc_section_ordering.py  numpydoc_section_ordering.py.out  numpydoc_section_spacing.args  numpydoc_section_spacing.py.out  numpydoc_style.py.out  numpydoc_style_without_type.args  numpydoc_style_without_type.py  numpydoc_style_without_type.py.out
tests/data/format/quotes_type/: class_docstring.py  class_docstring.py.out  function_docstrings.py  function_docstrings.py.out  mix_with_double_at_start.py  mix_with_double_at_start.py.out  mix_with_single_at_start.py  module_docstring.py  (+4 more)
(+55 files in other folders)
