[metadata]
name = pydocstringformatter
version = 0.0.3
author = Daniël van Noord
author_email = 13665637+DanielNoord@users.noreply.github.com
description = A tool to format Python docstrings that tries to follow recommendations from PEP 8 and PEP 257.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
include =
    pydocstringformatter*

[options.entry_points]
console_scripts =
    pydocstringformatter = pydocstringformatter:run_docstring_formatter
