[metadata]
name = pydocstringformatter
version = attr: pydocstringformatter.__version__
author = Daniël van Noord
author_email = 13665637+DanielNoord@users.noreply.github.com
description = A tool to automatically format Python docstrings that tries to follow recommendations from PEP 8 and PEP 257.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Quality Assurance
keywords = python docstring format
project_urls =
    Repository = https://github.com/DanielNoord/pydocstringformatter
    Releases = https://github.com/DanielNoord/pydocstringformatter/releases
    Bug Tracker = https://github.com/DanielNoord/pydocstringformatter/issues

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
include =
    pydocstringformatter*

[options.entry_points]
console_scripts =
    pydocstringformatter = pydocstringformatter:run_docstring_formatter
